kubernetes/apps/default/cs-agent/app/tcproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/tcproute_v1alpha2.json
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: cs-agent-game
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: cs2-tcp
  rules:
    - backendRefs:
        - name: cs-agent-game-tcp
          port: 27015
